--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "firefox"
   ],
   "dependencies" : {
-    "debug": "*"
+    "debug": "*",
+    "archiver": "~0.4",
+    "readdirp": "~0.2.4"
   },
   "devDependencies": {
-    "marionette-host-environment": "~0.0.1",
-    "marionette-client": "~0.5.5"
+    "mocha": "~1.10",
+    "marionette-host-environment": "~0.1.0",
+    "mozilla-profile-builder": "~0.0.2",
+    "marionette-client": "~0.5.6",
+    "tmp": "~0.0.20",
+    "ncp": "~0.4"
   },
   "license": "MIT",
   "engine": {
