--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "packaged-webapp",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "James Lal [:lightsofapollo]",
   "description": "Utility module for installing an app as preloaded & packaged app",
   "main": "index.js",
@@ -20,10 +20,12 @@
   "devDependencies": {
     "mocha": "~1.10",
     "marionette-host-environment": "~0.3.1",
+    "marionette-apps": "~0.2.1",
     "mozilla-profile-builder": "~0.1.1",
-    "marionette-client": "~0.5.7",
+    "marionette-client": "~0.11",
     "tmp": "~0.0.20",
-    "ncp": "~0.4"
+    "ncp": "~0.4",
+    "empty-port": "~0.0.1"
   },
   "license": "MIT",
   "engine": {
